@@ -135,8 +135,8 @@ public class LinuxX8664Syscall
     new X8664Syscall ("rt_sigprocmask", 14),
     new X8664Syscall ("rt_sigreturn", 15),
     new X8664Syscall ("ioctl", 16, 3, "i:iiI "),
-    new X8664Syscall ("pread64", 17),
-    new X8664Syscall ("pwrite64", 18),
+    new X8664Syscall ("pread", 17),
+    new X8664Syscall ("pwrite", 18),
     new X8664Syscall ("readv", 19, 3, "i:ipi "),
     new X8664Syscall ("writev", 20, 3, "i:ipi "),
     new X8664Syscall ("access", 21, 2, "i:si "),
@@ -175,8 +175,8 @@ public class LinuxX8664Syscall
     new X8664Syscall ("setsockopt", 54, 5, "i:iiipp "),
     new X8664Syscall ("getsockopt", 55, 5, "i:iiipp "),
     new X8664Syscall ("clone", 56, 2, "i:ip "),
-    new X8664Syscall (58),
     new X8664Syscall ("fork", 57, 0, "i: "),
+    new X8664Syscall ("vfork", 58),
     new X8664Syscall ("execve", 59, 3, "i:ppp "),
     new X8664Syscall ("exit", 60, 1),
     new X8664Syscall ("wait4", 61, 4, "i:iWiP "),
@@ -332,8 +332,8 @@ public class LinuxX8664Syscall
     new X8664Syscall ("get_thread_area", 211, 1, "i:p "),
     new X8664Syscall ("lookup_dcookie", 212),
     new X8664Syscall ("epoll_create", 213),
-    new X8664Syscall ("epoll_ctl_old", 214),
-    new X8664Syscall ("epoll_wait_old", 215),
+    new X8664Syscall ("epoll_ctl", 214),
+    new X8664Syscall ("epoll_wait", 215),
     new X8664Syscall ("remap_file_pages", 216),
     new X8664Syscall ("getdents64", 217, 3, "i:ipi "),
     new X8664Syscall ("set_tid_address", 218),
@@ -342,8 +342,8 @@ public class LinuxX8664Syscall
     new X8664Syscall ("fadvise64", 221),
     new X8664Syscall ("timer_create", 222),
     new X8664Syscall ("timer_settime", 223),
-    new X8664Syscall (224),
-    new X8664Syscall (225),
+    new X8664Syscall ("timer_gettime", 224),
+    new X8664Syscall ("timer_getoverrun", 225),
     new X8664Syscall ("timer_delete", 226),
     new X8664Syscall ("clock_settime", 227),
     new X8664Syscall ("clock_gettime", 228),
