@@ -1,3 +1,8 @@
+2006-09-21  Mark Wielaard  <mark@klomp.org>
+
+	* LinuxX8664Syscall.java (syscallList): Updated with audit results.
+	* TestSyscallsWithAudit.java (testLinuxEMT64): Enable test.
+
 2006-09-20  Nurdin Premji <npremji@redhat.com>
 
 	* ProcTasksObserver.java (deletedFrom): Add a call to the ProcObserver.ProcTasks deletedFrom function.
